decoding/decoding-manifests/decoding-sdk-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decoding-sdk-worker
spec:
  selector:
    worker.service: decoding-sdk-worker
  ports:
  - name: decoding-sdk-worker-service-port
    protocol: TCP
    port: 80
    targetPort: 80
