decoding/decoding-manifests/decoding-sdk-server-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 500M 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              service:
                name: decoding-sdk-server
                port:
                  number: 8010
            path: /
            pathType: Prefix
